misc/old-ddd/gateway/ingress-chat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-api
  annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-dns
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chat.syncjob.ru
      secretName: wildcard-syncjob-tls
  rules:
    - host: chat.syncjob.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-api
                port:
                  number: 80
